spacing fixes

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ padding-left: 70px;
 padding-right: 70px;
 font-weight: 300;
 color: rgb(10,10,10);
-margin-bottom: 40px;
+margin-bottom: 10px;
 }
 
 
@@ -114,6 +114,7 @@ margin-bottom: 40px;
   text-decoration: none;
   font-weight: 600;
   margin-bottom: 20px;
+  margin-top: 50px;
 }
 
 .github a:link{
